err/berrl.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/berrl'...
Compiling './lib/python3.5/site-packages/berrl/geohash_logic.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (geohash_logic.py, line 926)
Compiling './lib/python3.5/site-packages/berrl/multi_socket.py'...
***   File "./lib/python3.5/site-packages/berrl/multi_socket.py", line 15
    print ports
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/berrl/pipegeohash.py'...
***   File "./lib/python3.5/site-packages/berrl/pipegeohash.py", line 91
    print derivfield,operation
                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/berrl/pipegeojson.py'...
***   File "./lib/python3.5/site-packages/berrl/pipegeojson.py", line 320
    print 'GeoJSON file written to location: %s' % location
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/berrl/pipehtml.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pipehtml.py, line 723)
Compiling './lib/python3.5/site-packages/berrl/pipewidgets.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (pipewidgets.py, line 234)
Compiling './lib/python3.5/site-packages/berrl/postgis_interface.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (postgis_interface.py, line 19)
Compiling './lib/python3.5/site-packages/berrl/quickmaps.py'...
***   File "./lib/python3.5/site-packages/berrl/quickmaps.py", line 420
    print 'Wrote %s to geojson.' % filename
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/berrl-1.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
